changed the backlog design to a table

--- a/design/backlog.html
+++ b/design/backlog.html
@@ -42,33 +42,48 @@
             <a href="./index.html" class="btn view-backlog">Back to board</a>
           </div>
         </header>
-        <main class="backlog-board">
-          <article class="card">
-            <p>Create pipeline with Github Actions</p>
-            <p class="tag">Infra</p>
-          </article>
-          <article class="card">
-            <p>Some task for PGM3</p>
-            <p class="tag">Documentation</p>
-          </article>
-          <article class="card">
-            <p>Set up Strapi on Render</p>
-            <p class="tag">Infra</p>
-            <p class="tag">Back-end</p>
-          </article>
-          <article class="card">
-            <p>Add formatting with Prettier</p>
-            <p class="tag">Front-end</p>
-          </article>
-          <article class="card">
-            <p>Add Linting with ESLint</p>
-            <p class="tag">Front-end</p>
-          </article>
-          <article class="card">
-            <p>Initialize Git repository on Github</p>
-            <p class="tag">Infra</p>
-          </article>
-        </main>
+
+        <table>
+          <tbody class="backlog-board">
+            <tr class="card">
+              <td>
+                <p>Initialize Git repository on Github</p>
+                <p class="tag">Infra</p>
+              </td>
+            </tr>
+            <tr class="card">
+              <td>
+                <p>Some task for PGM3</p>
+                <p class="tag">Documentation</p>
+              </td>
+            </tr>
+            <tr class="card">
+              <td>
+                <p>Set up Strapi on Render</p>
+                <p class="tag">Infra</p>
+                <p class="tag">Back-end</p>
+              </td>
+            </tr>
+            <tr class="card">
+              <td>
+                <p>Add formatting with Prettier</p>
+                <p class="tag">Front-end</p>
+              </td>
+            </tr>
+            <tr class="card">
+              <td>
+                <p>Add Linting with ESLint</p>
+                <p class="tag">Front-end</p>
+              </td>
+            </tr>
+            <tr class="card">
+              <td>
+                <p>Initialize Git repository on Github</p>
+                <p class="tag">Infra</p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
